<resources>
    <string name="app_name">Proyecto1</string>
    <string name="title">Ingresa los datos solicitados</string>
    <string name="nameUser">Nombre: </string>
    <string name="birthdayUser">Fecha \n de nacimiento: </string>
    <string name="AccNumberUser">Número de cuenta:</string>
    <string name="emailUser">Correo:</string>
    <string name="submit">Enviar</string>
    <string name="greetUser">¡Hola %s !</string>
    <string name="ageUser">Edad: </string>
    <string name="Zodiac">Signo del Zodiaco Chino: </string>
    <string name="Zsign">Signo Obtenido</string>
    <string name="NameSpace">Nombre</string>
    <string name="AccountSpace">000000000</string>
    <string name="EmailSpace">Correo</string>
    <string name="BirthSpace">01/01/2000</string>
    <string name="AgeSpace">%d años</string>
    <string name="Age1Space">1 año</string>
    <string name="wrName">Escribe tu nombre</string>
    <string name="wrBirth">Fecha de nacimiento</string>
    <string name="wrAccount">9 dígitos</string>
    <string name="wrEmail">emailname@email.com</string>
    <string name="ToastName">Por favor Ingresa un nombre</string>
    <string name="ToastEmail">Ingrese un correo</string>
    <string name="ToastEmailValid">Ingrese un correo correcto</string>
    <string name="ToastBirth">Ingrese una fecha</string>
    <string name="ToastBirthValid">Ingrese una fecha valida</string>
    <string name="ToastAccount">Ingrese un número de cuenta</string>
    <string name="ToastAccountLength">Ingrese un número de cuenta con 9 digitos</string>
    <string name="BirthFormat">%1$d/%2$d/%3$d</string>
    <string name="InforVerify">Por favor, revise su información</string>

    <string name="ZodiacMonkey">Mono</string>
    <string name="ZodiacRooster">Gallo</string>
    <string name="ZodiacDog">Perro</string>
    <string name="ZodiacPig">Cerdo</string>
    <string name="ZodiacRat">Rata</string>
    <string name="ZodiacOx">Buey</string>
    <string name="ZodiacTiger">Tigre</string>
    <string name="ZodiacRabbit">Conejo</string>
    <string name="ZodiacDragon">Dragón</string>
    <string name="ZodiacSnake">Serpiente</string>
    <string name="ZodiacHorse">Caballo</string>
    <string name="ZodiacGoat">Cabra</string>
</resources>